--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body{
-font-family: "roboto" sans-serif;
+font-family: "Roboto" sans-serif;
+color: #434455;
+background-color: #FFFFFF;
 }
 ul{
   list-style: none;
@@ -12,7 +14,7 @@ a{
 font-family: "Raleway", sans-serif;
 font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #2e2f42;
@@ -21,7 +23,7 @@ font-weight: 700;
     font-family: "Raleway", sans-serif;
 font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
