--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,7 @@ font-weight: 700;
     color: #fff;
 }
 
-.order-button {box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #4d5ae5;
+.order-button {
 font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -81,7 +80,7 @@ font-weight: 500;
     text-align: center;
     color: #2e2f42;}
 
-.team-list {box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+.team-list {
     background: #fff;}
 
 .team-member-name {font-weight: 500;
