--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-font-family: "Roboto",sans-serif;
+font-family: "Roboto", sans-serif;
 color: #434455;
 background-color: #FFFFFF;
 }
@@ -17,7 +17,7 @@ font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #2e2f42;
+    color: #4d5ae5;
 }
 .studio{
     font-family: "Raleway", sans-serif;
@@ -26,35 +26,46 @@ font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4d5ae5;
+    color: #2e2f42;
 }
-.nav-list {font-weight: 500;
+.nav-link {font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;}
 
-.contact-info {font-weight: 400;
+.contact-link {font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;}
-
+    color: #434455;
+font-style: normal;
+ }
+.contact-link:hover,:focus{
+color: #404bbf;
+}
 .hero-section {background: #2e2f42;
 }
 
 .hero-title {font-weight: 700;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
 }
 
 .order-button {
+font-family: "Roboto", sans-serif;
 font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #fff;}
+    color: #fff;
+    background-color: #4D5AE5;
+    cursor: pointer;
+}
+.order-button:hover,:focus{
+color: #404BBF;
+}
 
 .advantages-title {
     font-size: 0;
@@ -78,10 +89,11 @@ font-weight: 500;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;}
+    color: #2e2f42;
+text-transform: capitalize;}
 
 .team-list {
-    background: #fff;}
+    background: #ffffff;}
 
 .team-member-name {font-weight: 500;
     font-size: 20px;
@@ -101,7 +113,34 @@ font-weight: 500;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;}
+    color: #2e2f42;
+text-transform: capitalize;}
+.portfolio-title{
+font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.footer-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+        font-size: 18px;
+        line-height: 1.16667;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
+}
+
+.footer-studio {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+        font-size: 18px;
+        line-height: 1.16667;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #f4f4fd;
+}
 
 .portfolio-description {
     line-height: 1.5;
