--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,12 @@ font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;}
+.nav-link:hover{
+    color: #404bbf;
+}
+.contact-info{
+    font-style: normal;
+}
 
 .contact-link {font-weight: 400;
     line-height: 1.5;
@@ -64,7 +70,7 @@ font-weight: 500;
     cursor: pointer;
 }
 .order-button:hover,:focus{
-color: #404BBF;
+background-color: #404BBF;
 }
 
 .advantages-title {
@@ -93,7 +99,7 @@ color: #404BBF;
 text-transform: capitalize;}
 
 .team-list {
-    background: #ffffff;}
+    background-color: #ffffff;}
 
 .team-member-name {font-weight: 500;
     font-size: 20px;
