--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;}
-.nav-link:hover{
+.nav-link:hover:focus{
     color: #404bbf;
 }
 .contact-info{
@@ -45,7 +45,7 @@ font-weight: 700;
     color: #434455;
 font-style: normal;
  }
-.contact-link:hover,:focus{
+.contact-link:hover:focus{
 color: #404bbf;
 }
 .hero-section {background: #2e2f42;
@@ -69,7 +69,7 @@ font-weight: 500;
     background-color: #4D5AE5;
     cursor: pointer;
 }
-.order-button:hover,:focus{
+.order-button:hover:focus{
 background-color: #404BBF;
 }
 
@@ -99,7 +99,7 @@ background-color: #404BBF;
 text-transform: capitalize;}
 
 .team-list {
-    background-color: #ffffff;}
+    background-color: #FFFFFF;}
 
 .team-member-name {font-weight: 500;
     font-size: 20px;
