--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ background-color: #404BBF;
     letter-spacing: 0.02em;
     color: #434455;}
 
-.team-section {background-color: #FFFFFF;}
+.team-section {background-color: #F4F4FD;}
 
 .team-title {font-weight: 700;
     font-size: 36px;
