--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ background-color: #404BBF;
     letter-spacing: 0.02em;
     color: #434455;}
 
-.team-section {background-color: #F4F4FD;}
+.team-section {background-color: #FFFFFF;}
 
 .team-title {font-weight: 700;
     font-size: 36px;
@@ -108,7 +108,7 @@ background-color: #404BBF;
 text-transform: capitalize;}
 
 .team-list {
-    background-color: #FFFFFF;}
+    background-color: #F4F4FD;}
 
 .team-member-name {font-weight: 500;
     font-size: 20px;
