--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,10 @@ font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;}
-.nav-item:hover{
+.nav-list:hover{
     color: #404bbf;
 }
-.nav-item:focus{
+.nav-list:focus{
     color: #404bbf;
 }
 .contact-info{
