--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,11 @@ font-weight: 700;
 .nav-link:hover{
     color: #404bbf;
 }
+
 .nav-link:focus{
     color: #404bbf;
 }
+
 .contact-info{
     font-style: normal;
 }
@@ -97,7 +99,7 @@ background-color: #404BBF;
     letter-spacing: 0.02em;
     color: #434455;}
 
-.team-section {background-color: #FFFFFF;}
+.team-section {background-color: #F4F4FD;}
 
 .team-title {font-weight: 700;
     font-size: 36px;
@@ -107,8 +109,8 @@ background-color: #404BBF;
     color: #2e2f42;
 text-transform: capitalize;}
 
-.team-list {
-    background-color: #F4F4FD;}
+.team-member {
+    background-color: #FFFFFF;}
 
 .team-member-name {font-weight: 500;
     font-size: 20px;
