--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ a{
   text-decoration: none;
 }
 img{
-    display: block;
+    display:block;
 }
 .header{
     border-bottom: 1px solid #e7e9fc;
@@ -153,7 +153,7 @@ background-color: #404BBF;
     
 }
 .advantage-item{
-    width: calc((100% - 72px) / 4);
+    width: calc((100% - 3 * 24px) / 4);
   
 }
 
@@ -183,11 +183,15 @@ margin-bottom: 8px;
     text-align: center;
     color: #2e2f42;
 text-transform: capitalize;
-/* max-width: 162px; */
 margin: 0 auto 72px auto;}
 
 .team-member {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
+.team-member-text{
+    padding: 32px 0;
 }
 .team-list {
             background-color: #FFFFFF;
@@ -235,11 +239,19 @@ font-weight: 500;
 .portfolio-list{display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 48px;
 
+}
+.portfolio-item{
+width: calc((100% - 48px) / 3);
+}
+.portfolio-text{
+    border: 1px solid #e7e9fc;
 }
 .footer{
     padding-top: 100px;
     padding-bottom: 100px;
+    background: #2e2f42;
 }
 .footer-logo {
     font-family: "Raleway", sans-serif;
@@ -249,7 +261,8 @@ font-weight: 500;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
-
+        display: inline-block;
+margin-bottom: 16px;
 }
 
 .footer-studio {
@@ -267,7 +280,6 @@ font-weight: 500;
     letter-spacing: 0.02em;
     color: #434455;}
 
-.footer {background: #2e2f42;}
 
 .footer-description {
     line-height: 1.5;
@@ -296,7 +308,6 @@ max-width: 264px;
     padding-top: 32px;
     padding-bottom: 32px;
 }
-.visually-hidden{
-    position: absolute;
+.advantage-title{
     visibility: hidden;
 }
