--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,11 @@ img{
 .header{
     border-bottom: 1px solid #e7e9fc;
 }
-.heder-container{
+.header-container{
     display: flex;
     width: 1158px;
 }
-.navigation{
+.navigation-list{
     display: flex;
     align-items: center;
 }
@@ -191,7 +191,8 @@ margin: 0 auto 72px auto;}
     border-radius: 0px 0px 4px 4px;
 }
 .team-member-text{
-    padding: 32px 0;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 .team-list {
             background-color: #FFFFFF;
@@ -226,7 +227,6 @@ margin: 0 auto 72px auto;}
     text-align: center;
     color: #2e2f42;
 text-transform: capitalize;
-/* max-width: 218px; */
 margin: 0 auto 72px auto;}
 .portfolio-title{
 font-weight: 500;
@@ -247,6 +247,7 @@ width: calc((100% - 48px) / 3);
 }
 .portfolio-text{
     border: 1px solid #e7e9fc;
+border-top: none;
 }
 .footer{
     padding-top: 100px;
