--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,11 @@ padding-top: 24px;
 
 }
 .nav-item{
-    padding-top: 24px;
-        padding-bottom: 24px;
+   
+}
+.nav-link{
+  padding-top: 24px;
+        padding-bottom: 24px;   
 }
 .nav-link:hover{
     color: #404bbf;
@@ -191,8 +194,7 @@ margin: 0 auto 72px auto;}
     border-radius: 0px 0px 4px 4px;
 }
 .team-member-text{
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 0;
 }
 .team-list {
             background-color: #FFFFFF;
@@ -309,6 +311,7 @@ max-width: 264px;
     padding-top: 32px;
     padding-bottom: 32px;
 }
-.advantage-title{
-    visibility: hidden;
+.visually-hidden{
+    position: fixed;
+        transform: scale(0);
 }
