--- a/css/styles.css
+++ b/css/styles.css
@@ -305,13 +305,17 @@ max-width: 264px;
 
 
 }
-.team-member-text{
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-.visually-hidden{
-    position: fixed;
-        transform: scale(0);
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
