--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,20 @@ font-family: "Roboto", sans-serif;
 color: #434455;
 background-color: #FFFFFF;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
 ul{
   list-style: none;
   padding: 0;
@@ -197,7 +211,6 @@ margin: 0 auto 72px auto;}
     padding: 32px 0;
 }
 .team-list {
-            background-color: #FFFFFF;
             display: flex;
             gap: 24px;
         }
